Fix hiding of "until" tags

--- a/page.css
+++ b/page.css
@@ -1,45 +1,56 @@
 body.select-thy-c.hide-thy-c-version-tags .t-mark-rev.t-since-c89,
+body.select-thy-c.hide-thy-c-version-tags .t-mark-rev.t-until-c89,
 body.select-thy-c.hide-thy-c-version-tags .t-mark-rev.t-since-c95,
+body.select-thy-c.hide-thy-c-version-tags .t-mark-rev.t-until-c95,
 body.select-thy-c.hide-thy-c-version-tags .t-mark-rev.t-since-c99,
+body.select-thy-c.hide-thy-c-version-tags .t-mark-rev.t-until-c99,
 body.select-thy-c.hide-thy-c-version-tags .t-mark-rev.t-since-c11,
-body.select-thy-c.hide-thy-c-version-tags .t-mark-rev.t-since-c17
+body.select-thy-c.hide-thy-c-version-tags .t-mark-rev.t-until-c11,
+body.select-thy-c.hide-thy-c-version-tags .t-mark-rev.t-since-c17,
+body.select-thy-c.hide-thy-c-version-tags .t-mark-rev.t-until-c17
 {
 	display: none;
 }
 body.select-thy-c.hide-since-thy-c89 .is-since-thy-c89 { display: none; }
-body.select-thy-c.hide-since-thy-c95 .is-since-thy-c95 { display: none; }
-body.select-thy-c.hide-since-thy-c99 .is-since-thy-c99 { display: none; }
-body.select-thy-c.hide-since-thy-c11 .is-since-thy-c11 { display: none; }
-body.select-thy-c.hide-since-thy-c17 .is-since-thy-c17 { display: none; }
 body.select-thy-c.hide-until-thy-c89 .is-until-thy-c89 { display: none; }
+body.select-thy-c.hide-since-thy-c95 .is-since-thy-c95 { display: none; }
 body.select-thy-c.hide-until-thy-c95 .is-until-thy-c95 { display: none; }
+body.select-thy-c.hide-since-thy-c99 .is-since-thy-c99 { display: none; }
 body.select-thy-c.hide-until-thy-c99 .is-until-thy-c99 { display: none; }
+body.select-thy-c.hide-since-thy-c11 .is-since-thy-c11 { display: none; }
 body.select-thy-c.hide-until-thy-c11 .is-until-thy-c11 { display: none; }
+body.select-thy-c.hide-since-thy-c17 .is-since-thy-c17 { display: none; }
 body.select-thy-c.hide-until-thy-c17 .is-until-thy-c17 { display: none; }
 
 
 body.select-thy-c .t-rev-inl { border: initial; }
 body.select-thy-c .t-rev > td { border: initial; }
 body.select-thy-cxx.hide-thy-cxx-version-tags .t-mark-rev.t-since-cxx98,
+body.select-thy-cxx.hide-thy-cxx-version-tags .t-mark-rev.t-until-cxx98,
 body.select-thy-cxx.hide-thy-cxx-version-tags .t-mark-rev.t-since-cxx03,
+body.select-thy-cxx.hide-thy-cxx-version-tags .t-mark-rev.t-until-cxx03,
 body.select-thy-cxx.hide-thy-cxx-version-tags .t-mark-rev.t-since-cxx11,
+body.select-thy-cxx.hide-thy-cxx-version-tags .t-mark-rev.t-until-cxx11,
 body.select-thy-cxx.hide-thy-cxx-version-tags .t-mark-rev.t-since-cxx14,
+body.select-thy-cxx.hide-thy-cxx-version-tags .t-mark-rev.t-until-cxx14,
 body.select-thy-cxx.hide-thy-cxx-version-tags .t-mark-rev.t-since-cxx17,
-body.select-thy-cxx.hide-thy-cxx-version-tags .t-mark-rev.t-since-cxx20
+body.select-thy-cxx.hide-thy-cxx-version-tags .t-mark-rev.t-until-cxx17,
+body.select-thy-cxx.hide-thy-cxx-version-tags .t-mark-rev.t-since-cxx20,
+body.select-thy-cxx.hide-thy-cxx-version-tags .t-mark-rev.t-until-cxx20
 {
 	display: none;
 }
 body.select-thy-cxx.hide-since-thy-cxx98 .is-since-thy-cxx98 { display: none; }
-body.select-thy-cxx.hide-since-thy-cxx03 .is-since-thy-cxx03 { display: none; }
-body.select-thy-cxx.hide-since-thy-cxx11 .is-since-thy-cxx11 { display: none; }
-body.select-thy-cxx.hide-since-thy-cxx14 .is-since-thy-cxx14 { display: none; }
-body.select-thy-cxx.hide-since-thy-cxx17 .is-since-thy-cxx17 { display: none; }
-body.select-thy-cxx.hide-since-thy-cxx20 .is-since-thy-cxx20 { display: none; }
 body.select-thy-cxx.hide-until-thy-cxx98 .is-until-thy-cxx98 { display: none; }
+body.select-thy-cxx.hide-since-thy-cxx03 .is-since-thy-cxx03 { display: none; }
 body.select-thy-cxx.hide-until-thy-cxx03 .is-until-thy-cxx03 { display: none; }
+body.select-thy-cxx.hide-since-thy-cxx11 .is-since-thy-cxx11 { display: none; }
 body.select-thy-cxx.hide-until-thy-cxx11 .is-until-thy-cxx11 { display: none; }
+body.select-thy-cxx.hide-since-thy-cxx14 .is-since-thy-cxx14 { display: none; }
 body.select-thy-cxx.hide-until-thy-cxx14 .is-until-thy-cxx14 { display: none; }
+body.select-thy-cxx.hide-since-thy-cxx17 .is-since-thy-cxx17 { display: none; }
 body.select-thy-cxx.hide-until-thy-cxx17 .is-until-thy-cxx17 { display: none; }
+body.select-thy-cxx.hide-since-thy-cxx20 .is-since-thy-cxx20 { display: none; }
 body.select-thy-cxx.hide-until-thy-cxx20 .is-until-thy-cxx20 { display: none; }
 
 
